--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,28 @@
 /*  your css code here. If applicable */
+.main-container
+{
+	width:300px;
+	padding:60px;
+	background-color:lightgray;
+	box-shadow:2px 3px 8px rgba(0,0,0,0.9);
+	margin:30px;
+	align-items:center;
+	margin-right:100px;
+	justify-content:center;
+	height:500px;
+}
+#image
+{
+	width:200px;
+	height:200px;
+	box-shadow: 2px 2px 10px rgba(0,0,0,0.7);
+	
+}
+.buynow
+{
+	background-color:red;
+	color:white;
+	border-radius:10px;
+	padding:10px;
+	
+}
